<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <View
        android:id="@+id/color_preview"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/picker_hue" />

    <SeekBar
        android:id="@+id/seek_hue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="360" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picker_sat" />

    <SeekBar
        android:id="@+id/seek_sat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picker_val" />

    <SeekBar
        android:id="@+id/seek_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

</LinearLayout>
